[package]
name = "hive-search"
authors = ["DuncanRuns", "MiniaczQ"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
druid = "0.6.0"
bincode = "1.3.3"
serde = { version = "1.0.126", features = ["derive"] }

[dependencies.nbt]
package = "hematite-nbt"
version = "0.5.2"

[profile.dev.package."*"]
debug = false
opt-level = 3
debug-assertions = false
overflow-checks = false
