[package]
name = "hive-search"
authors = ["DuncanRuns", "MiniaczQ"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
druid = { git = "https://github.com/linebender/druid/" }
bincode = "1.3.3"
serde = { version = "1.0.126", features = ["derive"] }
image = "0.23.14"
base64 = "0.13.0"

[dependencies.nbt]
package = "hematite-nbt"
version = "0.5.2"

[profile.dev.package."*"]
debug = false
opt-level = 3
debug-assertions = false
overflow-checks = false
