[package]
name = "hive_search"
authors = ["DuncanRuns", "MiniaczQ"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
druid = { path = "D:/Projects/Rust/druid/druid" }
bincode = "1.3.3"
asynchronous-codec = "0.6.0"
serde = { version = "1.0.127", features = ["derive"] }
image = "0.23.14"
base64 = "0.13.0"
async-std = { version = "1.9.0", features = ["unstable"] }
futures = "0.3.16"
notify = "5.0.0-pre.11"
bytes = "1.0.1"
lazy_static = "1.4"

[dependencies.nbt]
package = "hematite-nbt"
version = "0.5.2"

[profile.dev.package."*"]
debug = false
opt-level = 3
debug-assertions = false
overflow-checks = false
